syntax="proto2";

package com.carretrofit.aagateway.proto;

message WifiStartRequest {
  required string ip_address = 1;
  required uint32 port = 2;
}

message WifiInfoResponse {
  required string ssid = 1;
  required string password = 2;
  required string bssid = 3;
  required SecurityMode security_mode = 4;
  optional AccessPointType access_point_type = 5;

  enum SecurityMode {
    UNKNOWN_SECURITY_MODE = 0;
    OPEN = 1;
    WEP_64 = 2;
    WEP_128 = 3;
    WPA_PERSONAL = 4;
    WPA2_PERSONAL = 5;
    WPA_WPA2_PERSONAL = 6;
    WPA_ENTERPRISE = 7;
    WPA2_ENTERPRISE = 8;
    WPA_WPA2_ENTERPRISE = 9;
  }

  enum AccessPointType {
    STATIC = 0;
    DYNAMIC = 1;
  }
}

enum Status {
  STATUS_UNSOLICITED_MESSAGE = 1;
  STATUS_SUCCESS = 0;
  STATUS_NO_COMPATIBLE_VERSION = -1;
  STATUS_WIFI_INACCESSIBLE_CHANNEL = -2;
  STATUS_WIFI_INCORRECT_CREDENTIALS = -3;
  STATUS_PROJECTION_ALREADY_STARTED = -4;
  STATUS_WIFI_DISABLED = -5;
  STATUS_WIFI_NOT_YET_STARTED = -6;
  STATUS_INVALID_HOST = -7;
  STATUS_NO_SUPPORTED_WIFI_CHANNELS = -8;
  STATUS_INSTRUCT_USER_TO_CHECK_THE_PHONE = -9;
  STATUS_PHONE_WIFI_DISABLED = -10;
  STATUS_WIFI_NETWORK_UNAVAILABLE = -11;
}

message WifiStartResponse {
  optional string ip_address = 1;
  optional uint32 port = 2;
  required Status status = 3;
}

message WifiConnectionStatus {
  required Status status = 1;
  optional string error_message = 2;
}
